# to_infinity_and_beyond

./: .gitattributes  .gitignore  .gitmodules  Executable_code_from_snippets_in_paper.ipynb  Holomorphic_dynamics_an_Odyssey_from_Chaos_to_Art.pytxcode  Holomorphic_dynamics_an_Odyssey_from_Chaos_to_Art.tex  Ideas  README.md  REDME_new.md  Rendering_tool.py  bibliography.bib  pyproject.toml
Development/Scripts Pygame/: Complex_plotter.py
Src/: future_plans.md
Src/Cloud/: run_sync.py  run_sync_upload.py  sync_log.txt
Src/Cloud/manifests/: local_manifest.json  public_index.json  remote_manifest.json
Src/Cloud/scripts/: generate_local_manifest.py  get_remote_manifest.py  public_pull.py  sync.py
Src/Plotter (still in development)/: Complex_plotter.py
Src/Rendering_engine/: Julia_sets_renderers.py  Julia_sets_renderers_classes.py  Julia_sets_renderers_old.py  manual_tests.py  utils.py
Src/Rendering_tool/: Rendering_tool.py  rendering_tool_constants.py  run_renderer.py
Src/Utils/: loading_bar.py  utils.py
Tools/: Loading_bar.py
Utils/: future_plans.md
Utils/Antialiasing (still in development)/: AntiAliasing.py
Utils/Renderers_still_in_development/: implementation.ipynb
Utils/article_dependencies/: Dependencies_descriptions.txt
pythontex-files-holomorphic_dynamics_an_odyssey_from_chaos_to_art/: holomorphic_dynamics_an_odyssey_from_chaos_to_art.pytxmcr  pythontex_data.pkl
